UI Fix: Move user account dropdown to z-index in front of everything (fix QueryStatus conflict)

--- a/assets/css/i2b2.css
+++ b/assets/css/i2b2.css
@@ -154,6 +154,7 @@ a:focus-visible {
 	padding-bottom: 0;
 	width: 12em;
 	max-width: 12em;
+	z-index: 10000;
 }
 
 .userRole {
